// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`openid datasource refreshes a token if it expires when fetching a user identity 1`] = `
Object {
  "email": "vincent@differential.com",
  "name": "Vincent Wilson",
}
`;

exports[`openid datasource refreshes a token if it expires when fetching a user identity 2`] = `
Array [
  Array [
    "refresh-token-456",
  ],
]
`;

exports[`openid datasource return's a user's identity using their openid credentials 1`] = `
Object {
  "email": "vincent@differential.com",
  "name": "Vincent Wilson",
}
`;

exports[`openid datasource return's a user's identity using their openid credentials 2`] = `
Array [
  Array [
    "access-token-456",
  ],
]
`;
